--- a/examples/style.css
+++ b/examples/style.css
@@ -41,11 +41,11 @@ paper-button.fancy {
     padding: 20px;
     text-align: center;
     padding-bottom: 100px;
+	height: 100%;
 }
 
 .info-sheet h1 {
     font-size: 4em;
-    font-family: "Garamond";
 }
 
 .info-sheet h2 {
@@ -56,7 +56,6 @@ paper-button.fancy {
 }
 
 .navigation-label {
-    font-family: "Garamond";
 }
 
 .info-sheet ul {
@@ -68,5 +67,9 @@ paper-button.fancy {
 
 .info-sheet li {
     text-align: left;
+}
+
+.info-sheet span {
+    color: red;
 }
 
